[metadata]
name = angularcorrelation
version = 0.1.0
url = "https://github.com/op3/python-angularcorrelation"
author = "Oliver Papst"
author_email = opapst@ikp.tu-darmstadt.de
maintainer_email = opapst@ikp.tu-darmstadt.de
license = GPL
license_file = LICENSE
download_url = "https://github.com/op3/python-angularcorrelation/releases"
description = Calculate angular distributions and correlations for linearly-polarized radiation
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    numpy>=1.21
    julia>=0.6.0
python_requires = >=3.10
